agregando contenido, mediaquerys y algo mas

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <title>Andres Proyect</title>
+    <title>Sweet Spot | Inicio</title>
 </head>
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-md navbar-dark fixed-top">
+        <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
             <div class="container-fluid">
                 <a class="navbar-brand logo" href="#"><img src="./images/logospot.png" width="120x100" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -51,17 +51,21 @@
     <section class="container-fluid marginSection">
         <div class="row  cardMargin">
             <div class="row ">
-                <div class="col-xxl-10 col-md-7 col-sm-12">
+                <div class="col-xxl-10 col-lg-8 col-md-7 col-sm-12 sinPadding">
                     <div class="card-body">
-                        <h5 class="card-title animated fadeInLeft" style="animation-delay: 1s">Bienvenidos a Sweet Spot!</h5>
-                        <p class="card-text animated fadeInLeft" style="animation-delay: 2s">¡Hola! Después de un tiempo planteándome la posibilidad de crear un blog,
+                        <h5 class="card-title animated fadeInLeft" style="animation-delay: 0.5s">Bienvenidos a Sweet
+                            Spot!
+                        </h5>
+                        <p class="card-text animated fadeInLeft" style="animation-delay: 1s">¡Hola! Después de un tiempo
+                            planteándome la posibilidad de crear un blog,
                             por fin me anime y acá estamos.
                             El objetivo fundamental del blog, como su nombre lo indica #SweetSpot (punto justo), es ser
                             la interfaz donde se concreten y conecten diversos intereses de la sociedad abordados por
                             diferentes puntos de vista. Es decir, con una visión “lo más plural posible”, intentando
                             llegar a un consenso, o por lo menos, a un debate de diferentes actores de la sociedad sobre
                             diferentes temas.</p>
-                            <p class="card-text" id="verMas" >Debido al eficiente trabajo del #laprogramacionselectiva, cada vez más leemos, escuchamos
+                        <p class="card-text" id="verMas">Debido al eficiente trabajo del #laprogramacionselectiva, cada
+                            vez más leemos, escuchamos
                             posiciones (generalmente parecidas a la nuestra) y estamos actualizados de los temas de
                             nuestro interés. Solo los de nuestro interés, obviando otras miradas y perdiéndonos de
                             hechos o debates interesantes e importantes que pasan bajo nuestro radar.
@@ -71,51 +75,51 @@
                             de la sociedad. Intentaremos llegar a una síntesis que al menos haga que todos sepamos que
                             piensa el otro y, con esa premisa, tratemos de construir puentes para un mejor futuro.
                             ¡Los invito a esta aventura!</p>
-                            <div class="btnTexto animated fadeInUpBig" style="animation-delay: 3.5s">
-                                <a href="#" class="btn btn-dark justify-content-center" id="btn-ver">Ver Más</a>
-                                <a href="#" class="btn btn-dark justify-content-center" id="btn-menos">Ver Menos</a>
-                            </div>
+                        <div class="btnTexto animated fadeInUpBig" style="animation-delay: 1.5s">
+                            <a href="#" class="btn btn-dark justify-content-center" id="btn-ver">Ver Más</a>
+                        </div>
                     </div>
                 </div>
-                <div class="col-xxl-2 col-md-5 col-sm-12">
-                    <img src="./images/andy1.jpg" class="imgAndy rounded animated fadeInRight" style="animation-delay: 3s" alt="AndyRojas">
+                <div class="col-xxl-2 col-lg-4 col-md-5 col-sm-12 centrarImg">
+                    <img src="./images/andy1.jpg" class="imgAndy rounded animated fadeInRight"
+                        style="animation-delay: 2s" alt="AndyRojas">
                 </div>
             </div>
         </div>
     </section>
-    <section class="container-fluid marginSection">
+    <section id="notasCharlas" class="container-fluid marginSection marginTopMobile">
         <div class="row filaUltimas">
             <div class="col-xxl-6 col-md-12 col-sm-12">
                 <div class="row">
-                    <h1>Últimas Notas</h1>
+                    <h3>Últimas Notas</h3>
                     <div class="col-xxl-6 col-md-6 col-sm-12">
                         <div class="card" style="width: 18rem;">
                             <img src="./images/nota1.jpeg" class="card-img-top" alt="imgNota1">
                             <div class="card-body">
-                                <h3 >Cómo pensar una narrativa de triple impacto para conversar con la sociedad</h3>
+                                <h4>Cómo pensar una narrativa de triple impacto para conversar con la sociedad</h4>
                                 <p class="cardNotes">Desde nuestras distintas áreas profesionales -asuntos públicos,
                                     comunicaciones y sostenibilidad- tenemos la intención de comunicar nuestro Triple
                                     Impacto:
                                     cómo aportamos en lo social, ambiental y económico.</p>
-                                <p class="autor"><span class="boldFont">Autor: </span>Andrés Rojas</p>
+                                <p class="autor"><small><span class="boldFont">Autor: </span>Andrés Rojas</small></p>
                                 <a href="https://medium.com/usina/triple-impacto-de-lo-que-no-se-habla-cbc5f8e2919"
                                     class="btn btn-dark ">Ir a la Nota</a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-xxl-6 col-md-6 col-sm-12">
+                    <div class="col-xxl-6 col-md-6 col-sm-12 marginTopMobile">
                         <div class="card" style="width: 18rem;">
                             <img src="./images/nota2.jpg" class="card-img-top" alt="imgNota2">
                             <div class="card-body">
-                                <h3>Una red colaborativa: El doble beneficio de nutrirse de colegas y aportar a la
+                                <h4>Una red colaborativa: El doble beneficio de nutrirse de colegas y aportar a la
                                     comunidad
-                                    profesional</h3>
+                                    profesional</h4>
                                 <p class="cardNotes">Como parte de los objetivos institucionales de trabajar “en cada
                                     etapa de
                                     la profesión”, la Comisión de Mandos Medios profundiza y cristaliza sus objetivos
                                     aún en
                                     cuarentena.</p>
-                                <p class="autor"><span class="boldFont">Autor: </span>Andrés Rojas</p>
+                                <p class="autor"><small><span class="boldFont">Autor: </span>Andrés Rojas</small></p>
                                 <a href="https://rrpp.org.ar/novedadesDetalle.php?id=216&utm_source=email_marketing&utm_admin=130724&utm_medium=email&utm_campaign="
                                     class="btn btn-dark">Ir a la Nota</a>
                             </div>
@@ -123,36 +127,36 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xxl-6 col-md-12 col-sm-12">
+            <div class="col-xxl-6 col-md-12 col-sm-12 marginTopMobile marginTopTablet">
                 <div class="row">
-                    <h1>Últimas Charlas</h1>
+                    <h3>Últimas Charlas</h3>
                     <div class="col-xxl-6 col-md-6 col-sm-12">
                         <div class="card" style="width: 18rem;">
                             <img src="./images/charla1.jfif" class="card-img-top" alt="imgCharla1">
                             <div class="card-body">
-                                <h3>Issues Management y Comunicación de Crisis
-                                </h3>
+                                <h4>Issues Management y Comunicación de Crisis
+                                </h4>
                                 <p class="cardNotes">Charla con los futuros colegas de UAI Centro -en el marco de la
                                     asignatura "Issues Management y Comunicación de Crisis". Gracias a la prof. Marisa
                                     Ramos Meneghetti por la invitación. Siempre es un placer conversar sobre el presente
                                     y el futuro de la profesión.
                                 </p>
-                                <p class="autor"><span class="boldFont">Autor: </span>Andrés Rojas</p>
+                                <p class="autor"><small><span class="boldFont">Autor: </span>Andrés Rojas</small></p>
                                 <a href="https://www.linkedin.com/posts/andrés-rojas-88244b132_gracias-a-andrés-rojas-responsable-de-aapp-activity-6712505831142785024-v_Mw/"
                                     class="btn btn-dark">Ir a la Charla</a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-xxl-6 col-md-6 col-sm-12">
+                    <div class="col-xxl-6 col-md-6 col-sm-12 marginTopMobile">
                         <div class="card" style="width: 18rem;">
                             <img src="./images/charla2.jpg" class="card-img-top" alt="imgCharla2">
                             <div class="card-body">
-                                <h3>USAL - Liderazgo y conducción de equipos</h3>
+                                <h4>USAL - Liderazgo y conducción de equipos</h4>
                                 <p class="cardNotes">Charla en la Facultad de Ciencias de la Educación y de la
                                     Comunicación Social de la USAL , fui invitado por Ana Kenny con el objetivo de
                                     transmitirle a los chic@s mi breve experiencia en esta profesión y poder conversar
                                     con ellos acerca de sus inquietudes.</p>
-                                <p class="autor"><span class="boldFont">Autor: </span>Andrés Rojas</p>
+                                <p class="autor"><small><span class="boldFont">Autor: </span>Andrés Rojas</small></p>
                                 <a href="https://www.linkedin.com/posts/andrés-rojas-88244b132_gracias-a-andrés-rojas-responsable-de-aapp-activity-6712505831142785024-v_Mw/"
                                     class="btn btn-dark">Ir a la Charla</a>
                             </div>
@@ -197,7 +201,8 @@
                     <ul class="list-unstyled d-flex">
                         <li class="icon"><a class="link-light" href="#"><i class="fab fa-linkedin"></i></a></li>
                         <li class="ms-3 icon"><a class="link-light" href="#"><i class="fab fa-instagram"></i></a></li>
-                        <li class="ms-3 icon"><a class="link-light" href="#"><i class="fas fa-envelope-square"></i></a></li>
+                        <li class="ms-3 icon"><a class="link-light" href="#"><i class="fas fa-envelope-square"></i></a>
+                        </li>
                     </ul>
                 </ul>
             </div>
@@ -206,12 +211,14 @@
             <p>&copy; 2021 Andy Rojas. All rights reserved.</p>
         </div>
     </footer>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-        <script src="js/wow.min.js"></script>
-        <script src="js/main.js"></script>
+    <script src="js/wow.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
