--- a/servicios.html
+++ b/servicios.html
@@ -12,14 +12,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Andres Proyect</title>
+    <title>Sweet Spot | Servicios</title>
 </head>
 
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
             <div class="container-fluid">
-                <a class="navbar-brand logo" href="/index.html"><img src="./images/logospot.png" width="120x100" alt=""></a>
+                <a class="navbar-brand logo" href="/index.html"><img src="./images/logospot.png" width="120x100"
+                        alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -61,27 +62,21 @@
                                 <a href="/contacto.html" class="btn">Solicitá tu asesoramiento</a>
                             </div>
                         </div>
-                        <div class="col-xxl-6">
-                            <p>Vitae veniam ab et eos voluptas. Omnis ipsum delectus et rerum fuga
-                                dolor
-                                voluptas beatae voluptas. Voluptates aspernatur est blanditiis qui qui. Sunt enim fugiat
-                                in
-                                architecto et et fugit quia dicta.
-
-                                Sapiente voluptas sunt. Non molestiae repudiandae molestias in expedita dicta. Ut
-                                explicabo
-                                odio minima in rem quas et ea. Illum beatae ipsam tenetur amet aliquid. Qui dolore in
-                                sit
-                                voluptates eos. In voluptatem vero.
-
-                                Autem cumque quae aspernatur ab sapiente ratione
-
-                                Sapiente voluptas sunt.</p>
+                        <div class="col-xxl-6 columnaLista">
+                            <ul>
+                                <li>Planificación estratégica de las comunicaciones</li>
+                                <li>Relacionamiento con públicos específicos y comunidad</li>
+                                <li>Asuntos Públicos – Relaciones con Gobierno y regulaciones</li>
+                                <li>Manejo de crisis</li>
+                                <li>Actividades de RSE</li>
+                                <li>Desarrollo de contenidos (comunicados de prensa, columnas de opinión, etc.)</li>
+                                <li>Participación en eventos y exposiciones</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="col-xxl-6 col-md-6 col-xs-12 marginAutoLR">
+            <div class="col-xxl-6 col-md-6 col-xs-12 marginAutoLR marginTop">
                 <div class="card">
                     <h3 class="tituloServicios colorPrimario">Capacitaciones para empresas y emprendimientos</h3>
                     <div class="row">
@@ -92,33 +87,25 @@
                                 <a href="/contacto.html" class="btn">Solicitá tu asesoramiento</a>
                             </div>
                         </div>
-                        <div class="col-xxl-6">
-                            <p>Vitae veniam ab et eos voluptas. Omnis ipsum delectus et rerum fuga
-                                dolor
-                                voluptas beatae voluptas. Voluptates aspernatur est blanditiis qui qui. Sunt enim fugiat
-                                in
-                                architecto et et fugit quia dicta.
-
-                                Sapiente voluptas sunt. Non molestiae repudiandae molestias in expedita dicta. Ut
-                                explicabo
-                                odio minima in rem quas et ea. Illum beatae ipsam tenetur amet aliquid. Qui dolore in
-                                sit
-                                voluptates eos. In voluptatem vero.
-
-                                Autem cumque quae aspernatur ab sapiente ratione
-
-                                Sapiente voluptas sunt.</p>
+                        <div class="col-xxl-6 columnaLista">
+                            <ul>
+                                <li>Planificación estratégica de las comunicaciones</li>
+                                <li>Hacia una estrategia de asuntos públicos</li>
+                                <li>Oratoria</li>
+                                <li>Posicionamiento y reputación</li>
+                                <li>Marca personal</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <section id="charlas" class="container-fluid marginSection">
-        <h2 class="colorPrimario">Charla en Universidades</h2>
+    <section id="charlas" class="container-fluid marginSection sinMargen">
+        <h3 class="colorPrimario">Charla en Universidades</h3>
         <div class="row">
             <div class="col-xxl-5 col-md-5 col-sm-12">
-                <h4>Issues Management y Comunicaciónde Crisis</h4>
+                <h4>Issues Management y Comunicación de Crisis</h4>
                 <img src="/images/charla1.jfif" class="img-fluid" alt="charla1">
                 <p class="alignRightFecha text-muted">02/12/2020</p>
                 <p>
@@ -182,7 +169,8 @@
                     <ul class="list-unstyled d-flex">
                         <li class="icon"><a class="link-light" href="#"><i class="fab fa-linkedin"></i></a></li>
                         <li class="ms-3 icon"><a class="link-light" href="#"><i class="fab fa-instagram"></i></a></li>
-                        <li class="ms-3 icon"><a class="link-light" href="#"><i class="fas fa-envelope-square"></i></a></li>
+                        <li class="ms-3 icon"><a class="link-light" href="#"><i class="fas fa-envelope-square"></i></a>
+                        </li>
                     </ul>
                 </ul>
             </div>
