--- a/sobreMi.html
+++ b/sobreMi.html
@@ -11,14 +11,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Andres Proyect</title>
+    <title>Sweet Spot | Sobre Mi</title>
 </head>
 
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
             <div class="container-fluid">
-                <a class="navbar-brand logo" href="/index.html"><img src="./images/logospot.png" width="120x100" alt=""></a>
+                <a class="navbar-brand logo" href="/index.html"><img src="./images/logospot.png" width="120x100"
+                        alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -48,12 +49,12 @@
     </header>
     <section class="container-fluid marginSection">
         <div class="row card cardMargin">
-            <div class="row g-0">
+            <div class="row g-0 contentCard">
                 <div class="row">
                     <h1 id="tituloSobreMi" class="card-title">Hola, soy Andy Rojas</h1>
                 </div>
                 <div class="col-xxl-3 col-md-5 col-sm-12">
-                    <img src="./images/andy2.jpg" class="img-fluid rounded imgSobreMi" width="350" alt="AndyRojas">
+                    <img src="./images/andy2.jpg" class="img-fluid rounded imgSobreMi" alt="AndyRojas">
                 </div>
                 <div class="col-xxl-5 col-md-7 col-sm-12">
                     <div class="card-body">
@@ -86,9 +87,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xxl-4 col-md-12 col-sm-12 imagenMenor">
-                    <img src="./images/Foto Chica.jpg" class="img-fluid rounded imgSobreMi" alt="AndyRojas2">
-                    <img src="./images/sobremi2.JPG" class="img-fluid rounded imgSobreMi" alt="AndyRojas2">
+                <div class="col-xxl-4 col-md-12 col-sm-12">
+                    <img src="./images/Foto Chica.jpg" class="img-fluid rounded imgSobreMi" width="330"
+                        alt="AndyRojas2">
+                    <img src="./images/sobremi2.JPG" class="img-fluid rounded imgSobreMi" width="330" alt="AndyRojas3">
                 </div>
             </div>
         </div>
@@ -166,7 +168,8 @@
                     <ul class="list-unstyled d-flex">
                         <li class="icon"><a class="link-light" href="#"><i class="fab fa-linkedin"></i></a></li>
                         <li class="ms-3 icon"><a class="link-light" href="#"><i class="fab fa-instagram"></i></a></li>
-                        <li class="ms-3 icon"><a class="link-light" href="#"><i class="fas fa-envelope-square"></i></a></li>
+                        <li class="ms-3 icon"><a class="link-light" href="#"><i class="fas fa-envelope-square"></i></a>
+                        </li>
                     </ul>
                 </ul>
             </div>
