--- a/blog.html
+++ b/blog.html
@@ -11,14 +11,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Andres Proyect</title>
+    <title>Sweet Spot | Blog</title>
 </head>
 
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
             <div class="container-fluid">
-                <a class="navbar-brand logo" href="/index.html"><img src="./images/logospot.png" width="120x100" alt=""></a>
+                <a class="navbar-brand logo" href="/index.html"><img src="./images/logospot.png" width="120x100"
+                        alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -55,7 +56,7 @@
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-xxl-10 col-md-12 col-sm-12">
-                                    <h2>Cómo pensar una narrativa de triple impacto para conversar con la sociedad</h2>
+                                    <h3>Cómo pensar una narrativa de triple impacto para conversar con la sociedad</h3>
                                     <p class="alignLeft"><small class="boldFont colorSecundario">Andy Rojas -
                                             17/04/2021</small></p>
                                     <div class="blogImg">
@@ -157,8 +158,8 @@
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-xxl-10 col-md-12 col-sm-12">
-                                    <h2>Una red colaborativa: El doble beneficio de nutrirse de colegas
-                                        y aportar a la comunidad profesional</h2>
+                                    <h3>Una red colaborativa: El doble beneficio de nutrirse de colegas
+                                        y aportar a la comunidad profesional</h3>
                                     <p class="alignLeft"><small class="boldFont colorSecundario">Andy Rojas y
                                             Eugenia Fernícola-
                                             15/06/2020</small></p>
@@ -304,7 +305,8 @@
                     <ul class="list-unstyled d-flex">
                         <li class="icon"><a class="link-light" href="#"><i class="fab fa-linkedin"></i></a></li>
                         <li class="ms-3 icon"><a class="link-light" href="#"><i class="fab fa-instagram"></i></a></li>
-                        <li class="ms-3 icon"><a class="link-light" href="#"><i class="fas fa-envelope-square"></i></a></li>
+                        <li class="ms-3 icon"><a class="link-light" href="#"><i class="fas fa-envelope-square"></i></a>
+                        </li>
                     </ul>
                 </ul>
             </div>
