--- a/contacto.html
+++ b/contacto.html
@@ -11,14 +11,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Andres Proyect</title>
+    <title>Sweet Spot | Contacto</title>
 </head>
 
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
             <div class="container-fluid">
-                <a class="navbar-brand logo" href="/index.html"><img src="./images/logospot.png" width="120x100" alt=""></a>
+                <a class="navbar-brand logo" href="/index.html"><img src="./images/logospot.png" width="120x100"
+                        alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -49,7 +50,7 @@
     <section class="container-fluid marginSection">
         <h1 class="tituloSeccion colorSecundario">Conectemos</h1>
         <div id="containerContacto" class="col-xxl-5 col-md-6">
-            <form id="fs-frm" name="simple-contact-form" acceptCharset="utf-8" action="https://formspree.io/f/xyylrjdo"
+            <form id="fs-frm" name="simple-contact-form" acceptCharset="utf-8" action="https://formspree.io/f/xqknkynv"
                 method="post">
                 <fieldset id="fs-frm-inputs">
                     <h3 class="centrar colorPrimario">Ingrese sus datos y me comunicaré con usted</h3>
@@ -103,7 +104,8 @@
                     <ul class="list-unstyled d-flex">
                         <li class="icon"><a class="link-light" href="#"><i class="fab fa-linkedin"></i></a></li>
                         <li class="ms-3 icon"><a class="link-light" href="#"><i class="fab fa-instagram"></i></a></li>
-                        <li class="ms-3 icon"><a class="link-light" href="#"><i class="fas fa-envelope-square"></i></a></li>
+                        <li class="ms-3 icon"><a class="link-light" href="#"><i class="fas fa-envelope-square"></i></a>
+                        </li>
                     </ul>
                 </ul>
             </div>
