--- a/blog.html
+++ b/blog.html
@@ -5,6 +5,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="shortcut icon" href="./images/logoazul.png">
@@ -50,7 +51,7 @@
     <section id="blog" class="container-fluid marginSection">
         <div class="row">
             <div class="col-xxl-12 col-md-12 col-sm-12">
-                <h1 class="colorSecundario">Notas de Interés</h1>
+                <h1 class="colorSecundario animated fadeInLeft" style="animation-delay: 0.5s">Notas de Interés</h1>
                 <div class="row">
                     <div class="col-xxl-10 col-md-10 col-sm-12">
                         <div class="card-body">
