--- a/contacto.html
+++ b/contacto.html
@@ -5,6 +5,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="shortcut icon" href="./images/logoazul.png">
@@ -48,8 +49,7 @@
         </nav>
     </header>
     <section class="container-fluid marginSection">
-        <h1 class="tituloSeccion colorSecundario">Conectemos</h1>
-        <div id="containerContacto" class="col-xxl-5 col-md-6">
+        <div id="containerContacto" class="col-xxl-5 col-md-6 animated bounceInDown" style="animation-delay: 0.5s">
             <form id="fs-frm" name="simple-contact-form" acceptCharset="utf-8" action="https://formspree.io/f/xqknkynv"
                 method="post">
                 <fieldset id="fs-frm-inputs">
