--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
             <div class="container-fluid">
-                <a class="navbar-brand logo" href="#"><img src="./images/logospot.png" width="120x100" alt=""></a>
+                <a class="navbar-brand logo" href="#"><img src="./images/logospot.png" width="120x100" ></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -75,7 +75,7 @@
                             de la sociedad. Intentaremos llegar a una síntesis que al menos haga que todos sepamos que
                             piensa el otro y, con esa premisa, tratemos de construir puentes para un mejor futuro.
                             ¡Los invito a esta aventura!</p>
-                        <div class="btnTexto animated fadeInUpBig" style="animation-delay: 1.5s">
+                        <div class="btnTexto animated fadeInRight" style="animation-delay: 1.5s">
                             <a href="#" class="btn btn-dark justify-content-center" id="btn-ver">Ver Más</a>
                         </div>
                     </div>
@@ -91,7 +91,7 @@
         <div class="row filaUltimas">
             <div class="col-xxl-6 col-md-12 col-sm-12">
                 <div class="row">
-                    <h3>Últimas Notas</h3>
+                    <h3 class="animated fadeInLeft" style="animation-delay: 2s">Últimas Notas</h3>
                     <div class="col-xxl-6 col-md-6 col-sm-12">
                         <div class="card" style="width: 18rem;">
                             <img src="./images/nota1.jpeg" class="card-img-top" alt="imgNota1">
@@ -129,7 +129,7 @@
             </div>
             <div class="col-xxl-6 col-md-12 col-sm-12 marginTopMobile marginTopTablet">
                 <div class="row">
-                    <h3>Últimas Charlas</h3>
+                    <h3 class="wow animated fadeInLeft" style="animation-delay: 2s">Últimas Charlas</h3>
                     <div class="col-xxl-6 col-md-6 col-sm-12">
                         <div class="card" style="width: 18rem;">
                             <img src="./images/charla1.jfif" class="card-img-top" alt="imgCharla1">
