--- a/servicios.html
+++ b/servicios.html
@@ -4,8 +4,8 @@
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css" rel="styleshe>et">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="shortcut icon" href="./images/logoazul.png">
@@ -50,7 +50,7 @@
     </header>
     <section class="container-fluid marginSection">
         <div class="row">
-            <h1 class="colorSecundario tituloServicios">¿En qué puedo ayudarte?</h1>
+            <h1 class="colorSecundario tituloServicios animated fadeIn" style="animation-delay: 0.5s">¿En qué puedo ayudarte?</h1>
             <div class="col-xxl-6 col-md-6 col-xs-12 marginAutoLR">
                 <div class="card">
                     <h3 class="colorPrimario tituloServicios">Asesoramiento profesional</h3>
