--- a/sobreMi.html
+++ b/sobreMi.html
@@ -5,6 +5,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="shortcut icon" href="./images/logoazul.png">
@@ -51,7 +52,7 @@
         <div class="row card cardMargin">
             <div class="row g-0 contentCard">
                 <div class="row">
-                    <h1 id="tituloSobreMi" class="card-title">Hola, soy Andy Rojas</h1>
+                    <h1 id="tituloSobreMi" class="card-title animated flipInY" style="animation-delay: 0.5s">Hola, soy Andy Rojas</h1>
                 </div>
                 <div class="col-xxl-3 col-md-5 col-sm-12">
                     <img src="./images/andy2.jpg" class="img-fluid rounded imgSobreMi" alt="AndyRojas">
