--- a/sobreMi.html
+++ b/sobreMi.html
@@ -89,7 +89,7 @@
                     </div>
                 </div>
                 <div class="col-xxl-4 col-md-12 col-sm-12">
-                    <img src="./images/Foto Chica.jpg" class="img-fluid rounded imgSobreMi" width="330"
+                    <img src="./images/fotochica.jpg" class="img-fluid rounded imgSobreMi" width="330"
                         alt="AndyRojas2">
                     <img src="./images/sobremi2.JPG" class="img-fluid rounded imgSobreMi" width="330" alt="AndyRojas3">
                 </div>
