--- a/blog.html
+++ b/blog.html
@@ -149,6 +149,7 @@
                                 Consejo Profesional de Relaciones Públicas. Amante del Café de especialidad.
                                 </p>
                                 <div class="botonNotas">
+                                    <a class="btn">Continuar leyendo</a>
                                     <a href="https://medium.com/usina/triple-impacto-de-lo-que-no-se-habla-cbc5f8e2919"
                                         class="btn">Leer en Web</a>
                                 </div>
