--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
             <div class="container-fluid">
-                <a class="navbar-brand logo" href="#"><img src="./images/logospot.png" width="120x100" ></a>
+                <a class="navbar-brand logo" href="/index.html"><img src="./images/logospot.png" width="120x100" ></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -29,7 +29,7 @@
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                            <a class="nav-link active" aria-current="page" href="/index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="sobreMi.html">Sobre mi</a>
@@ -89,9 +89,9 @@
     </section>
     <section id="notasCharlas" class="container-fluid marginSectionMenor marginTopMobile">
         <div class="row filaUltimas">
+            <h3 class="animated fadeIn" style="animation-delay: 3s">Últimas Novedades</h3>
             <div class="col-xxl-6 col-md-12 col-sm-12">
                 <div class="row">
-                    <h3 class="animated fadeInLeft" style="animation-delay: 2s">Últimas Notas</h3>
                     <div class="col-xxl-6 col-md-6 col-sm-12">
                         <div class="card" style="width: 18rem;">
                             <img src="./images/nota1.jpeg" class="card-img-top" alt="imgNota1">
@@ -129,7 +129,6 @@
             </div>
             <div class="col-xxl-6 col-md-12 col-sm-12 marginTopMobile marginTopTablet">
                 <div class="row">
-                    <h3 class="wow animated fadeInLeft" style="animation-delay: 2s">Últimas Charlas</h3>
                     <div class="col-xxl-6 col-md-6 col-sm-12">
                         <div class="card" style="width: 18rem;">
                             <img src="./images/charla1.jfif" class="card-img-top" alt="imgCharla1">
@@ -217,7 +216,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-    <script src="js/wow.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 
