--- a/blog.html
+++ b/blog.html
@@ -57,7 +57,7 @@
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-xxl-10 col-md-12 col-sm-12">
-                                    <h3>Cómo pensar una narrativa de triple impacto para conversar con la sociedad</h3>
+                                    <h3>Nº1 Cómo pensar una narrativa de triple impacto para conversar con la sociedad</h3>
                                     <p class="alignLeft"><small class="boldFont colorSecundario">Andy Rojas -
                                             17/04/2021</small></p>
                                     <div class="blogImg">
@@ -189,11 +189,12 @@
                             </div>
                         </div>
                     </div>
+                    
                     <div class="col-xxl-10 col-md-10 col-sm-12">
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-xxl-10 col-md-12 col-sm-12">
-                                    <h3>Una red colaborativa: El doble beneficio de nutrirse de colegas
+                                    <h3>Nº2 Una red colaborativa: El doble beneficio de nutrirse de colegas
                                         y aportar a la comunidad profesional</h3>
                                     <p class="alignLeft"><small class="boldFont colorSecundario">Andy Rojas y
                                             Eugenia Fernícola-
