--- a/servicios.html
+++ b/servicios.html
@@ -78,7 +78,7 @@
             </div>
             <div class="col-xxl-6 col-md-6 col-xs-12 marginAutoLR marginTop">
                 <div class="card">
-                    <h3 class="tituloServicios colorPrimario">Capacitaciones para empresas y emprendimientos</h3>
+                    <h3 class="tituloServicios colorPrimario">Capacitaciones para<br> emprendimientos y empresas</h3>
                     <div class="row">
                         <div class="col-xxl-6">
                             <img src="/images/servicio2.jpg" class="img-fluid rounded imagenServicios"
@@ -101,8 +101,8 @@
             </div>
         </div>
     </section>
-    <section id="charlas" class="container-fluid marginSectionMenor sinMargen">
-        <h3 class="colorPrimario">Charla en Universidades</h3>
+    <section id="charlas" class="container-fluid marginSectionMenor sinMargen ">
+        <h3 class="colorPrimario">Charlas en Universidades</h3>
         <div class="row">
             <div class="col-xxl-5 col-md-5 col-sm-12">
                 <h4>Issues Management y Comunicación de Crisis</h4>
@@ -124,8 +124,8 @@
                 <p>Hoy tuve el placer de volver a mi querida Facultad de Ciencias de la Educación y de la Comunicación
                     Social de la USAL , esta vez como joven profesional, fui invitado por Ana Kenny con el objetivo de
                     transmitirle a los chic@s mi breve experiencia en esta profesión y poder conversar con ellos acerca
-                    de sus inquietudes.
-                    Gracias infinitas Ana Kenny por hacerlo posible y crear estos contextos de posibilidad. También, a
+                    de sus inquietudes.</p>
+                <p>Gracias infinitas Ana Kenny por hacerlo posible y crear estos contextos de posibilidad. También, a
                     mi amigo y prof. Patricio Puerta y a la prof Gabriela Gaona por sumarse con sus respectivos cursos a
                     la conversación. obviamente, también, a los alumnos que participaron.
                     Celebro este tipo de espacios, donde se comparte experiencia y todos nos nutrimos de todos. Espero
