--- a/sobreMi.html
+++ b/sobreMi.html
@@ -138,7 +138,7 @@
         <div class="row marginAuto">
             <div class="col-xxl-3 col-md-6 col-sm-12 paddingLeft pb-3">
                 <h5>Servicios</h5>
-                <ul class="nav flex-column pb-4">
+                <ul class="nav flex-column">
                     <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">Asesoramiento Personal</a>
                     </li>
                     <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">Capacitación para Empresas</a>
