--- a/sobreMi.html
+++ b/sobreMi.html
@@ -52,7 +52,7 @@
         <div class="row card cardMargin">
             <div class="row g-0 contentCard">
                 <div class="row">
-                    <h1 id="tituloSobreMi" class="card-title animated flipInY" style="animation-delay: 0.5s">Hola, soy Andy Rojas</h1>
+                    <h1 id="tituloSobreMi" class="card-title animated flipInY" style="animation-delay: 0.5s">¡Hola, soy Andy Rojas!</h1>
                 </div>
                 <div class="col-xxl-3 col-md-5 col-sm-12">
                     <img src="./images/andy2.jpg" class="img-fluid rounded imgSobreMi" alt="AndyRojas">
@@ -100,11 +100,10 @@
         <div class="row">
             <div class="col-xxl-3 marginAutoLR">
                 <h4>Mis estudios</h4>
-                <p>Como te contaba arriba, cuando me presentaba, soy licenciado en Relaciones Pública. Gracias a la
-                    pandemia (algo positivo había que encontrarle) y mi curiosidad constante, también me formé en
+                <p>Como mencione anteriormente, soy licenciado en Relaciones Pública. Gracias a la
+                    pandemia (algo positivo que pude encontrarle), fue mi curiosidad constante, también me formé en
                     Community Manager y Publicidad en CoderHouse y realicé el curso de Design Thinking brindado por la
                     Universidad de Sydney.
-                    Continuara…
                 </p>
             </div>
             <div class="col-xxl-3 marginAutoLR">
@@ -125,7 +124,7 @@
                 </p>
                 </p>
             </div>
-            <div class="col-xxl-3 marginAutoLR">
+            <div class="col-xxl-3 marginAutoLR mb-3">
                 <h4>Mis objetivos profesionales</h4>
                 <p>Poder colaborar, mediante el asesoramiento profesional en comunicación y relacionamiento, con
                     diferentes organizaciones, empresas pymes, emprendedores, etc., que quieran maximizar su potencial.
