--- a/blog.html
+++ b/blog.html
@@ -179,11 +179,11 @@
                                 </p>
                                 <div class="botonNotas">
                                     <div>
-                                        <a id="btnNota1" class="btn">Continuar leyendo</a>
+                                        <a id="btnNota1" class="btn btn-dark justify-content-center">Continuar leyendo</a>
                                     </div>
                                     <div class="marginDivBtn">
                                         <a href="https://medium.com/usina/triple-impacto-de-lo-que-no-se-habla-cbc5f8e2919"
-                                            class="btn">Leer en Web</a>
+                                            class="btn btn-dark justify-content-center">Leer en Web</a>
                                     </div>
                                 </div>
                             </div>
@@ -316,11 +316,11 @@
                                 </div>
                                 <div class="botonNotas">
                                     <div>
-                                        <a id="btnNota2" class="btn">Continuar leyendo</a>
+                                        <a id="btnNota2" class="btn btn-dark justify-content-center">Continuar leyendo</a>
                                     </div>
                                     <div class="marginDivBtn">
                                         <a href="https://rrpp.org.ar/novedadesDetalle.php?id=216&utm_source=email_marketing&utm_admin=130724&utm_medium=email&utm_campaign="
-                                            class="btn">Leer en Web</a>
+                                            class="btn btn-dark justify-content-center">Leer en Web</a>
                                     </div>
                                 </div>
                             </div>
