--- a/contacto.html
+++ b/contacto.html
@@ -65,7 +65,7 @@
                         placeholder="Escriba su consulta o servicio que desee adquirir" required></textarea>
                     <input type="hidden" name="_subject" id="email-subject" value="Contact Form Submission" />
                 </fieldset>
-                <input class="enviarForm btn" type="submit" value="Enviar" />
+                <input class="enviarForm btn btn-dark justify-content-center" type="submit" value="Enviar" />
             </form>
         </div>
     </section>
