--- a/servicios.html
+++ b/servicios.html
@@ -59,7 +59,7 @@
                             <img src="/images/servicio1.jpg" class="img-fluid rounded imagenServicios"
                                 alt="Asesoramiento">
                             <div class="btnServicios">
-                                <a href="/contacto.html" class="btn">Solicitá tu asesoramiento</a>
+                                <a href="/contacto.html" class="btn btn-dark justify-content-center">Solicitá tu asesoramiento</a>
                             </div>
                         </div>
                         <div class="col-xxl-6 columnaLista">
@@ -84,7 +84,7 @@
                             <img src="/images/servicio2.jpg" class="img-fluid rounded imagenServicios"
                                 alt="Capacitaciones">
                             <div class="btnServicios">
-                                <a href="/contacto.html" class="btn">Solicitá tu asesoramiento</a>
+                                <a href="/contacto.html" class="btn btn-dark justify-content-center">Solicitá tu asesoramiento</a>
                             </div>
                         </div>
                         <div class="col-xxl-6 columnaLista">
@@ -114,7 +114,7 @@
                     placer conversar sobre el presente y el futuro de la profesión.
                 </p>
                 <div class="btnServicios">
-                    <a href="/contacto.html" class="btn">Solicitá tu asesoramiento</a>
+                    <a href="/contacto.html" class="btn btn-dark justify-content-center">Solicitá tu asesoramiento</a>
                 </div>
             </div>
             <div class="col-xxl-5 col-md-5 col-sm-12">
