--- a/sobreMi.html
+++ b/sobreMi.html
@@ -52,7 +52,7 @@
         <div class="row card cardMargin">
             <div class="row g-0 contentCard">
                 <div class="row">
-                    <h1 id="tituloSobreMi" class="card-title animated flipInY" style="animation-delay: 0.5s">¡Hola, soy Andy Rojas!</h1>
+                    <h1 id="tituloSobreMi" class="card-title animated fadeInDown" style="animation-delay: 0.5s">¡Hola, soy Andy Rojas!</h1>
                 </div>
                 <div class="col-xxl-3 col-md-5 col-sm-12">
                     <img src="./images/andy2.jpg" class="img-fluid rounded imgSobreMi" alt="AndyRojas">
